--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+<stream-channel-list></stream-channel-list>
+<stream-channel>
+  <stream-channel-header></stream-channel-header>
+  <stream-message-list></stream-message-list>
+  <stream-notification-list></stream-notification-list>
+  <stream-message-input></stream-message-input>
+  <stream-thread name="thread">
+    <stream-message-list
+      name="thread-message-list"
+      mode="thread"
+    ></stream-message-list>
+    <stream-message-input
+      mode="thread"
+      name="thread-message-input"
+    ></stream-message-input>
+  </stream-thread>
+</stream-channel>
